Proyecto Mercado Liebre Deploy 2

--- a/views/index.html
+++ b/views/index.html
@@ -22,13 +22,15 @@
                 <a href="/home"><img class="logoprincipal" src="/img/images/logo-mercado-liebre.svg" alt=""></a>
             </div>
             <div class="searchbar">
-                <input type="text" placeholder="Buscar productos, marcas y más..."> 
-                <div class="divLupa">
-                    <button class="lupa">
-                        <!-- Lupa -->
-                        <i class='fas fa-search'></i>
-                    </button>
-                </div>
+                <form class="formSearchbar" action="/home">
+                    <input type="text" placeholder="Buscar productos, marcas y más...">
+                    <div class="divLupa">
+                        <button class="lupa">
+                            <!-- Lupa -->
+                            <i class='fas fa-search'></i>
+                        </button>
+                    </div>
+                </form>
             </div>
             <div class="divCompraCuotas">
                 <i class="fa-solid fa-hand-holding-dollar"></i>
@@ -39,23 +41,23 @@
         </div>
 
         <br>
-        
+
         <!-- NavBar -->
-            <nav class="navbar">
-                <ul type="none" class="lista1">
-                    <li><a href="">Ofertas</a></li>
-                    <li><a href="">Tiendas Oficiales</a></li>
-                    <li><a href="">Vender</a></li>
-                    <li><a href="">Ayuda</a></li>
-                </ul>
-                <ul type="none" class="lista2">
-                    <li><a href="/register">Creá tu cuenta</a><i class="fa-regular fa-id-card"></i></li>
-                    <li><a href="/login">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
-                    <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
-                </ul>
-            </nav>
-        
-           
+        <nav class="navbar">
+            <ul type="none" class="lista1">
+                <li><a href="">Ofertas</a></li>
+                <li><a href="">Tiendas Oficiales</a></li>
+                <li><a href="">Vender</a></li>
+                <li><a href="">Ayuda</a></li>
+            </ul>
+            <ul type="none" class="lista2">
+                <li><a href="/register">Creá tu cuenta</a><i class="fa-regular fa-id-card"></i></li>
+                <li><a href="/login">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
+                <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
+            </ul>
+        </nav>
+
+
         <div class="burger">
             <i class="fa-solid fa-bars"></i>
         </div>
@@ -69,10 +71,10 @@
         </div>
         <section class="section1">
             <br>
-            
+
             <article class="articuloMargen">
                 <div class="boxshadow">
-                <img class="Cafetera" src="/img/images/img-cafetera-moulinex.jpg" alt="">
+                    <img class="Cafetera" src="/img/images/img-cafetera-moulinex.jpg" alt="">
                     <div class="subdiv">
                         <div class="divEnvio"><i class="fa-solid fa-truck"></i></div>
                         <p class="precio">$6.770</p>
@@ -83,8 +85,8 @@
             </article>
 
             <article class="articuloMargen">
-                <div class="boxshadow"> 
-                <img src="/img/images/img-macbook-pro-2019.jpg" alt="">
+                <div class="boxshadow">
+                    <img src="/img/images/img-macbook-pro-2019.jpg" alt="">
                     <div class="subdiv">
                         <div class="divEnvio"><i class="fa-solid fa-truck"></i></div>
                         <p class="precio">$230.000</p>
@@ -97,25 +99,25 @@
 
             <article class="articuloMargen">
                 <div class="boxshadow">
-                <img src="/img/images/img-samsung-galaxy-s10.jpg" alt="">
+                    <img src="/img/images/img-samsung-galaxy-s10.jpg" alt="">
                     <div class="subdiv">
                         <div class="divEnvio"><i class="fa-solid fa-truck"></i></div>
                         <p class="precio">$70.500</p>
                         <p class="descuento">10% OFF</p>
                         <h4 class="descripcion">Samsung Galaxy S10</h4>
                     </div>
-                </div>    
+                </div>
             </article>
 
             <article>
-                <div class="boxshadow"> 
-                <img src="/img/images/img-tv-samsung-smart.jpg" alt="">
-                        <div class="subdiv">
+                <div class="boxshadow">
+                    <img src="/img/images/img-tv-samsung-smart.jpg" alt="">
+                    <div class="subdiv">
                         <div class="divEnvio"><i class="fa-solid fa-truck"></i></div>
                         <p class="precio">$23.200</p>
                         <p class="descuento">5% OFF</p>
                         <h4 class="descripcion">SmartTv Samsung 43"</h4>
-                        </div>
+                    </div>
                 </div>
             </article>
         </section>
@@ -127,8 +129,8 @@
         </div>
         <section class="section2">
             <article class="articuloMargen">
-                <div class="boxshadow"> 
-                <img src="/img/images/img-cafetera-moulinex.jpg" alt="">
+                <div class="boxshadow">
+                    <img src="/img/images/img-cafetera-moulinex.jpg" alt="">
                     <div class="subdiv">
                         <div class="divEnvio"><i class="fa-solid fa-truck"></i></div>
                         <p class="precio">$6.770</p>
@@ -139,8 +141,8 @@
             </article>
 
             <article class="articuloMargen">
-                <div class="boxshadow"> 
-                <img src="/img/images/img-macbook-pro-2019.jpg" alt="">
+                <div class="boxshadow">
+                    <img src="/img/images/img-macbook-pro-2019.jpg" alt="">
                     <div class="subdiv">
                         <div class="divEnvio"><i class="fa-solid fa-truck"></i></div>
                         <p class="precio">$230.000</p>
@@ -151,8 +153,8 @@
             </article>
 
             <article class="articuloMargen">
-                <div class="boxshadow"> 
-                <img src="/img/images/img-samsung-galaxy-s10.jpg" alt="">
+                <div class="boxshadow">
+                    <img src="/img/images/img-samsung-galaxy-s10.jpg" alt="">
                     <div class="subdiv">
                         <div class="divEnvio"><i class="fa-solid fa-truck"></i></div>
                         <p class="precio">$70.500</p>
@@ -163,8 +165,8 @@
             </article>
 
             <article>
-                <div class="boxshadow"> 
-                <img src="/img/images/img-tv-samsung-smart.jpg" alt="">
+                <div class="boxshadow">
+                    <img src="/img/images/img-tv-samsung-smart.jpg" alt="">
                     <div class="subdiv">
                         <div class="divEnvio"><i class="fa-solid fa-truck"></i></div>
                         <p class="precio">$23.200</p>
@@ -183,17 +185,19 @@
             <section>
                 <i class="fa-solid fa-credit-card"></i>
                 <h4 class="paga">Pagá con tarjeta o en efectivo</h4>
-                <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es
+                <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre
+                    es
                     seguro!</p>
             </section>
-    
+
             <section>
                 <i class="fa-solid fa-gift"></i>
                 <h4>Envío gratis desde los $ 2.500</h4>
-                <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
+                <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un
+                    beneficio de
                     Mercado Puntos.</p>
             </section>
-    
+
             <section>
                 <i class="fa-solid fa-user-shield"></i>
                 <h4>Seguridad de principio a fin</h4>
