--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,12 +79,18 @@ div button.lupa {
     background-color: white;
     border: none;
     position: relative;
-    top: -2px;
+    top: -3px;
     right: 10px;
     padding: 5px;
 }
 
-
+.formSearchbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 28px;
+    margin-right: -28px;
+}
 
 
 /* Burger */
