--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="searchbar">
                 <form class="formSearchbar" action="/home">
-                    <input type="text" placeholder="Buscar productos, marcas y más...">
+                    <input type="text" placeholder="Buscar productos, marcas...">
                     <div class="divLupa">
                         <button class="lupa">
                             <!-- Lupa -->
